# retrolm

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  build-dos.sh  build-linux.sh  build.sh  docker-shell.sh
.github/: FUNDING.yml
.github/workflows/: c-ci.yml
src/: activations.c  activations.h  chat.c  chat.h  exceptions.c  exceptions.h  layers.c  layers.h  loader.c  loader.h  logger.c  logger.h  main.c  matmul.asm  matrix.c  matrix.h  matrix_ops.c  matrix_ops.h  memory.c  memory.h  retrolm.c  sampling.c  sampling.h  transformer.c  transformer.h  utils.c  utils.h
test/: README.md
tests/: test_activations.c  test_framework.h  test_layers.c  test_matrix.c  test_matrix_ops.c  test_memory.c  test_runner.c  test_sampling.c  test_transformer.c  test_utils.c
torch_code/: README.md  config.json  config.py  data.py  export.py  inference.py  main.py  model.py  pyproject.toml  train.py
torch_code/checkpoints/: model_checkpoint.pt
torch_code/data/: .gitattributes  training_data.txt
torch_code/weights/: .gitattributes  config.txt
training/: transformer.py
