[project]
name = "retrolm"
version = "0.1.0"
description = "PyTorch code used to train RetroLM"
authors = [
    {name = "Angelo Zuffiano",email = "agaz1985@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
